--- a/page7.html
+++ b/page7.html
@@ -72,8 +72,8 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
                     <a class="nav-link link text-white display-4" href="page4.html#header1-35">HOW WE WORK</a>
-                </li><li class="nav-item dropdown">
-                    <a class="nav-link link dropdown-toggle text-white display-4" href="page6.html#content5-29" data-toggle="dropdown-submenu" aria-expanded="false">
+                </li><li class="nav-item dropdown open">
+                    <a class="nav-link link dropdown-toggle text-white display-4" href="page6.html#content5-29" data-toggle="dropdown-submenu" aria-expanded="true">
                         
                         PRODUCTS</a><div class="dropdown-menu"><a class="dropdown-item text-white display-4" href="page6.html#content5-29">METAL CARPORTS</a><a class="dropdown-item text-white display-4" href="page3.html#content5-26">METAL GARAGES</a><a class="dropdown-item text-white display-4" href="page8.html#content5-2z">METAL STRUCTURES</a><a class="dropdown-item text-white display-4" href="page9.html#content5-3r">BARNS &amp; AGRI. BUILDINGS</a></div>
                 </li></ul>
@@ -82,7 +82,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">make a website</a></section><section class="mbr-section content5 cid-r8guATtj5Y" id="content5-2b">
+<section class="engine"><a href="https://mobirise.info/e">how to make a site for free</a></section><section class="mbr-section content5 cid-r8guATtj5Y" id="content5-2b">
 
     
 
