--- a/page12.html
+++ b/page12.html
@@ -82,7 +82,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">free website design templates</a></section><section class="cid-rpOpa1PRW2 mbr-fullscreen" id="header2-47" data-sortbtn="btn-primary">
+<section class="engine"><a href="https://mobirise.info/f">easy site creator</a></section><section class="cid-rpOpa1PRW2 mbr-fullscreen" id="header2-47" data-sortbtn="btn-primary">
 
     
 
@@ -91,10 +91,9 @@
     <div class="container align-center">
         <div class="row justify-content-md-center">
             <div class="mbr-white col-md-10">
-                <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1"><em>Special Offer Cash Price Only</em></h1>
+                <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1"><em>Special Offer, Cash Price Only!</em></h1>
                 
-                <p class="mbr-text pb-3 mbr-fonts-style display-5">
-                    You need to take advantage of this offer, Metal has never been as its lowest, we are giving a special pricing  of this styles of Metal Garage Structures that are top sells in our company with only 5% down to save the price for the next 6 months, till you are ready for installation, not only that our lead time is less than 2 weeks. NO other company in the history has gotten this low that is why we are call New Era Structures!!!! 
+                <p class="mbr-text pb-3 mbr-fonts-style display-5">“You need to take advantage of this offer,” Metal has never been at its lowest, we are giving a special pricing of these styles of Metal Garage Structures that are our top sells in our company with only 5% down to save the price for the next 6 months, till you are ready for installation, not only that our lead time is less than 2 weeks. NO other company in the history has gotten this low that is why we are call New Era Structures!!!! 
                 </p>
                 <div class="mbr-section-btn"><a class="btn btn-md btn-secondary display-4" href="https://www.facebook.com/newerastructures/inbox/?mailbox_id=1957857434429797&selected_item_id=100015777331465">Message</a>
                     <a class="btn btn-md btn-white-outline display-4" href="https://www.facebook.com/newerastructures/"><span class="socicon socicon-facebook mbr-iconfont mbr-iconfont-btn"></span></a></div>
