--- a/page7.html
+++ b/page7.html
@@ -84,7 +84,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="mbr-section content5 cid-r8guATtj5Y" id="content5-2b">
+<section class="engine"><a href="https://mobirise.info/y">html web templates</a></section><section class="mbr-section content5 cid-r8guATtj5Y" id="content5-2b">
 
     
 
